# DuoSigna-FinalVersion

./: .gitignore  README.md
backend/: .env  database.py  main.py  models.py  modifiche.md  pyproject.toml  quiz.py  security.py
backend/chatbot/: NLP_tools.py  NN_embeddings.npy  NN_signs.json  asl_general_knowledge.txt  bot_core.py  build_embeddings.py  chunks_mapping.json  config.py  embeddings.npy  embeddings_general.npy  feedback_engine.py  letters_signs.json  requirements.txt  settings.json  sign_to_prediction_index_map.json  signs.json  summaries.csv  vision_core.py  vision_core_l1.py
backend/chatbot/_savedmodel_extracted/: fingerprint.pb  saved_model.pb
backend/chatbot/_savedmodel_extracted/variables/: variables.index
frontend/: nuxt.config.ts  package-lock.json  package.json
frontend/app/: app.vue
frontend/app/assets/css/: main.css
frontend/app/components/: AppSidebar.vue  ChatHistorySidebar.vue
frontend/app/composables/: useOnboarding.js
frontend/app/pages/: chatbot.vue  dictionary.vue  homepage.vue  index.vue  quiz.vue  settings.vue
