[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt==3.2.2",
    "en-core-web-sm",
    "fastapi>=0.136.1",
    "kokoro>=0.9.4",
    "nltk>=3.9.4",
    "ollama>=0.6.2",
    "opencv-python-headless>=4.13.0.92",
    "pandas>=3.0.3",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pygame>=2.6.1",
    "pyjwt>=2.13.0",
    "pypdf>=6.12.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "scikit-learn==1.6.1",
    "sentence-transformers>=5.5.1",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "spacy>=3.8.14",
    "sqlalchemy>=2.0.49",
    "tensorflow>=2.21.0",
    "torch>=2.12.0",
    "transformers>=5.9.0",
    "uvicorn>=0.47.0",
    "yt-dlp>=2026.3.17",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
